2007-08-10  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/act-ruby.rb: Refactoring.

	* lib/qwik/farm.rb: Create _QwikSite.txt when the site is created.
	* lib/qwik/site.rb: Add a test case to check unnecessary directory.

	* lib/qwik/group-db.rb: Do not create unnecessary directory.
	* lib/qwik/farm.rb: Add check.
	* lib/qwik/site.rb: Ditto.

2007-08-09  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/act-ruby.rb: New plugin to embed ruby code.

	* lib/qwik/config.rb: Add 'enable_ruby' setting.
	* etc/config.txt: Ditto.
	* etc/config-debug.txt: Ditto.

	* lib/qwik/act-presen.rb (plg_presen_switch): New plugin to switch
	to presen mode.
	* share/super/_AdminMenu.txt: Add "presen_switch".

	* lib/qwik/act-presen.rb: Make title to back link.
	* share/theme/s5/qwikworld/pretty.css: Ditto.

2007-08-05  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/page-files.rb: Do not backup files in default.

	* lib/qwik/db-backup.rb: Do not backup some pages.

	* lib/qwik/act-files.rb: Set max file size.
	* lib/qwik/site-config.rb: Ditto.
	* lib/qwik/catalog-ja.rb: Ditto.

	* lib/qwik/farm.rb: Do bury to same directory.

2007-06-25  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/Makefile: Make test all default.
	* Makefile: Ditto.

	* lib/qwik/act-diary.rb: Fix a test case.
	* lib/qwik/act-day.rb: Ditto.
	* lib/qwik/util-charset.rb: Ditto.

2007-04-29  MIWA Takayuki  <mw-hawk proof.con.ne.jp>

	* lib/qwik/parser-inline.rb: Fixed a bug in embedding images
	with ALT text. See http://qwik.jp/qwikweb/23.html.

	* lib/qwik/act-diary.rb: Removed duplicated definition of 
	Qwik::Action::D_PluginInclude_ja.
	
2007-04-25  Kazuhiro NISHIYAMA  <zn mbf.nifty.com>

	* lib/qwik/mail-header.rb, lib/qwik/group-site.rb: Remove
	own ml prefix only.

	* Makefile: Add .PHONY target.

2007-04-21  Kouichirou Eto  <2007 eto.com>

	* bin/qwik-service.rb: Change LOAD_PATH order.
	* bin/qwik-service.rb: Add error msg for Permission Denied.
	* bin/qwik-service.rb (die): New method.